[tool.poetry]
name = "mixture of agents with groq"
version = "0.1.0"
description = ""
authors = ["Shireen <shireenlowyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
loguru = "^0.7.2"
datasets = "^2.20.0"
openai = "^1.35.14"
python-dotenv = "^1.0.1"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
